# Label2D

./: README.md
src/: CMakeLists.txt  label2d.cpp  label2d.hpp  main.cpp
